--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,39 +10,43 @@
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@400;600;700&display=swap" rel="stylesheet">
     <title>Vertigo</title>
 </head>
+
 <body>
-    <header>
-        <img src="./imagens/logo.png" alt="Logo">
-    </header>
+    <div class="conteudo">
+        <header>
+            <img src="./imagens/logo.png" alt="Logo">
+        </header>
 
-    <main>
-        <section class="descricao">
-            <h1>Acesse a plataforma</h1>
-            <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
-        </section>
+        <main>
+            <section class="descricao">
+                <h1>Acesse a plataforma</h1>
+                <p>Faça login ou registre-se para começar a construir seus projetos ainda hoje.</p>
+            </section>
 
-        <section class="login">
-            <form action="">
-              <div class="input-box">
-                <label for="email">Email</label>
-                <input type="email" placeholder="Digite seu e-mail" id="email">
-              </div>
+            <section class="login">
+                <form action="">
+                    <div class="input-box">
+                        <label for="email">Email</label>
+                        <input type="email" placeholder="Digite seu e-mail" id="email">
+                    </div>
 
-              <div class="input-box">
-                <div>
-                    <label for="senha">Senha</label>
-                    <a href="">Esqueceu a senha?</a>
-                </div>
-                <input type="password" placeholder="Digite sua senha" id="senha">
-              </div>
+                    <div class="input-box">
+                        <div>
+                            <label for="senha">Senha</label>
+                            <a href="">Esqueceu a senha?</a>
+                        </div>
+                        <input type="password" placeholder="Digite sua senha" id="senha">
+                    </div>
 
-              <button>Entrar</button>
+                    <button>Entrar</button>
 
-            </form>
+                </form>
 
-            <p>Ainda não tem uma conta? <a href="">Inscreva-se</a></p>
+                <p>Ainda não tem uma conta? <a href="">Inscreva-se</a></p>
 
-        </section>
-    </main>
+            </section>
+        </main>
+    </div>
 </body>
+
 </html>
