--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             </section>
         </main>
     </div>
+    <div class="bg-desktop">
+        <img src="./imagens/img (1).png" alt="background desktop">
+    </div>
 </body>
-
 </html>
